[package]
name = "gho"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "3.6"
inquire = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.1"
tempfile = "3.10"
